--- a/bizz/seafood-otranse/pom.xml
+++ b/bizz/seafood-otranse/pom.xml
@@ -83,6 +83,13 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.aliyun</groupId>
+		    <artifactId>aliyun-java-sdk-core</artifactId>
+		    <version>4.5.1</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<outputDirectory>${basedir}/src/main/webapp/WEB-INF/classes</outputDirectory>
